--- a/portfolio.html
+++ b/portfolio.html
@@ -10,209 +10,242 @@
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="node_modules/modern-normalize/modern-normalize.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
   <body>
     <header class="header">
-      <nav class="header-navigation">
-        <a class="header-logo link" href="./index.html"
-          >Web<span class="header-logo-span">Studio</span></a
-        >
+      <div class="container header-container">
+        <nav class="header-navigation">
+          <a class="header-logo link" href="./index.html"
+            >Web<span class="header-logo-span">Studio</span></a
+          >
 
-        <ul class="header-menu list">
-          <li class="header-menu-item">
-            <a class="header-item-link link" href="./index.html">Studio</a>
-          </li>
-          <li class="header-menu-item">
-            <a class="header-item-link link" href="./portfolio.html"
-              >Portfolio</a
-            >
-          </li>
-          <li class="header-menu-item">
-            <a class="header-item-link link" href="">Contacts</a>
-          </li>
-        </ul>
-      </nav>
+          <ul class="header-menu list">
+            <li class="header-menu-item">
+              <a class="header-item-link link" href="./index.html">Studio</a>
+            </li>
+            <li class="header-menu-item">
+              <a class="header-item-link link" href="./portfolio.html"
+                >Portfolio</a
+              >
+            </li>
+            <li class="header-menu-item">
+              <a class="header-item-link link" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
 
-      <address class="header-address">
-        <ul class="header-address-list list">
-          <li class="header-list-item">
-            <a
-              class="header-address-link link"
-              href="mailto:info@devstudio.com"
-              target="_blank"
-              rel="noopener noreferrer"
-            >
-              info@devstudio.com
-            </a>
-          </li>
-          <li>
-            <a class="header-address-link link" href="tel:+110001111111">
-              +11 (000) 111-11-11
-            </a>
-          </li>
-        </ul>
-      </address>
+        <address class="header-address">
+          <ul class="header-address-list list">
+            <li class="header-list-item">
+              <a
+                class="header-address-link link"
+                href="mailto:info@devstudio.com"
+                target="_blank"
+                rel="noopener noreferrer"
+              >
+                info@devstudio.com
+              </a>
+            </li>
+            <li>
+              <a class="header-address-link link" href="tel:+110001111111">
+                +11 (000) 111-11-11
+              </a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
 
     <main>
       <section class="portfolio">
-        <h1 hidden>Portfolio</h1>
+        <div class="container">
+          <div class="portfolio-container">
+            <h1 class="visually-hidden">Portfolio</h1>
 
-        <ul class="portfolio-list list">
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">All</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">
-              Web Site
-            </button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">App</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">Design</button>
-          </li>
-          <li class="portfolio-list-item">
-            <button class="portfolio-item-button" type="button">
-              Marketing
-            </button>
-          </li>
-        </ul>
+            <ul class="portfolio-list list">
+              <li class="portfolio-list-item">
+                <button class="portfolio-item-button" type="button">All</button>
+              </li>
+              <li class="portfolio-list-item">
+                <button class="portfolio-item-button" type="button">
+                  Web Site
+                </button>
+              </li>
+              <li class="portfolio-list-item">
+                <button class="portfolio-item-button" type="button">App</button>
+              </li>
+              <li class="portfolio-list-item">
+                <button class="portfolio-item-button" type="button">
+                  Design
+                </button>
+              </li>
+              <li class="portfolio-list-item">
+                <button class="portfolio-item-button" type="button">
+                  Marketing
+                </button>
+              </li>
+            </ul>
+          </div>
 
-        <!-- Rows -->
+          <!-- Rows -->
+        <div rows-wrap>
+          <ul class="rows list">
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--1.jpg"
+                  alt="Banking App Interface Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Banking App Interface Concept</h2>
+                <p class="rows-list-text">App</p>
+                </div>
+              </a>
+            </li>
 
-        <ul class="rows list">
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--1.jpg"
-                alt="Banking App Interface Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Banking App Interface Concept</h2>
-              <p class="rows-list-text">App</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--2.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Cashless Payment</h2>
+                <p class="rows-list-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--2.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Cashless Payment</h2>
-              <p class="rows-list-text">Marketing</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--3.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Meditation App</h2>
+                <p class="rows-list-text">App</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--3.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Meditation App</h2>
-              <p class="rows-list-text">App</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--4.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Taxi Service</h2>
+                <p class="rows-list-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--4.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Taxi Service</h2>
-              <p class="rows-list-text">Marketing</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--5.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Screen Illustrations</h2>
+                <p class="rows-list-text">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--5.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Screen Illustrations</h2>
-              <p class="rows-list-text">Design</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--6.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Online Courses</h2>
+                <p class="rows-list-text">Marketing</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--6.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Online Courses</h2>
-              <p class="rows-list-text">Marketing</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--7.jpg"
+                  alt="Instagram Stories Concept"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card">
+                <h2 class="rows-list-item">Instagram Stories Concept</h2>
+                <p class="rows-list-text">Design</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--7.jpg"
-                alt="Instagram Stories Concept"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Instagram Stories Concept</h2>
-              <p class="rows-list-text">Design</p>
-            </a>
-          </li>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--8.jpg"
+                  alt="Organic Food"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card"></div>
+                <h2 class="rows-list-item">Organic Food</h2>
+                <p class="rows-list-text">Web Site</p>
+              </a>
+            </li>
 
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--8.jpg"
-                alt="Organic Food"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Organic Food</h2>
-              <p class="rows-list-text">Web Site</p>
-            </a>
-          </li>
-
-          <li class="rows-list">
-            <a class="rows-list-link link" href="">
-              <img
-                src="./images/img--9.jpg"
-                alt="Fresh Coffee"
-                width="360"
-                height="300"
-              />
-              <h2 class="rows-list-item">Fresh Coffee</h2>
-              <p class="rows-list-text">Web Site</p>
-            </a>
-          </li>
-        </ul>
+            <li class="rows-list">
+              <a class="rows-list-link link" href="">
+                <img
+                  src="./images/img--9.jpg"
+                  alt="Fresh Coffee"
+                  width="360"
+                  height="300"
+                />
+                <div class="rows-card"></div>
+                <h2 class="rows-list-item">Fresh Coffee</h2>
+                <p class="rows-list-text">Web Site</p>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
     <footer class="footer">
-      <a class="footer-logo link" href="./index.html"
-        >Web<span class="footer-logo-span">Studio</span></a
-      >
-      <p class="footer-text">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container">
+        <div class="footer-container">
+          <a class="footer-logo link" href="./index.html"
+            >Web<span class="footer-logo-span">Studio</span></a
+          >
+          <p class="footer-text">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
