--- a/portfolio.html
+++ b/portfolio.html
@@ -6,14 +6,12 @@
     <title>Portfolio</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
+    
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -64,7 +62,7 @@
 
     <main>
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-section">
           <div class="portfolio-container">
             <h1 class="visually-hidden">Portfolio</h1>
 
@@ -94,141 +92,143 @@
           </div>
 
           <!-- Rows -->
-        <div rows-wrap>
-          <ul class="rows list">
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--1.jpg"
-                  alt="Banking App Interface Concept"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Banking App Interface Concept</h2>
-                <p class="rows-list-text">App</p>
-                </div>
-              </a>
-            </li>
+          
+          <div rows-wrap>
+            <ul class="rows list">
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--1.jpg"
+                    alt="Banking App Interface Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Banking App Interface Concept</h2>
+                  <p class="rows-list-text">App</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--2.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Cashless Payment</h2>
-                <p class="rows-list-text">Marketing</p>
-                </div>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--2.jpg"
+                    alt="Cashless Payment"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Cashless Payment</h2>
+                  <p class="rows-list-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--3.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Meditation App</h2>
-                <p class="rows-list-text">App</p>
-                </div>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--3.jpg"
+                    alt="Meditation App"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Meditation App</h2>
+                  <p class="rows-list-text">App</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--4.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Taxi Service</h2>
-                <p class="rows-list-text">Marketing</p>
-                </div>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--4.jpg"
+                    alt="Taxi Service"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Taxi Service</h2>
+                  <p class="rows-list-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--5.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Screen Illustrations</h2>
-                <p class="rows-list-text">Design</p>
-                </div>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--5.jpg"
+                    alt="Screen Illustrations"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Screen Illustrations</h2>
+                  <p class="rows-list-text">Design</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--6.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Online Courses</h2>
-                <p class="rows-list-text">Marketing</p>
-                </div>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--6.jpg"
+                    alt="Online Courses"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Online Courses</h2>
+                  <p class="rows-list-text">Marketing</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--7.jpg"
-                  alt="Instagram Stories Concept"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card">
-                <h2 class="rows-list-item">Instagram Stories Concept</h2>
-                <p class="rows-list-text">Design</p>
-                </div>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--7.jpg"
+                    alt="Instagram Stories Concept"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card">
+                  <h2 class="rows-list-item">Instagram Stories Concept</h2>
+                  <p class="rows-list-text">Design</p>
+                  </div>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--8.jpg"
-                  alt="Organic Food"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card"></div>
-                <h2 class="rows-list-item">Organic Food</h2>
-                <p class="rows-list-text">Web Site</p>
-              </a>
-            </li>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--8.jpg"
+                    alt="Organic Food"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card"></div>
+                  <h2 class="rows-list-item">Organic Food</h2>
+                  <p class="rows-list-text">Web Site</p>
+                </a>
+              </li>
 
-            <li class="rows-list">
-              <a class="rows-list-link link" href="">
-                <img
-                  src="./images/img--9.jpg"
-                  alt="Fresh Coffee"
-                  width="360"
-                  height="300"
-                />
-                <div class="rows-card"></div>
-                <h2 class="rows-list-item">Fresh Coffee</h2>
-                <p class="rows-list-text">Web Site</p>
-              </a>
-            </li>
-          </ul>
+              <li class="rows-list">
+                <a class="rows-list-link link" href="">
+                  <img
+                    src="./images/img--9.jpg"
+                    alt="Fresh Coffee"
+                    width="360"
+                    height="300"
+                  />
+                  <div class="rows-card"></div>
+                  <h2 class="rows-list-item">Fresh Coffee</h2>
+                  <p class="rows-list-text">Web Site</p>
+                </a>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
     </main>
