--- a/index.html
+++ b/index.html
@@ -4,16 +4,21 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Webstudio</title>
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
+      integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link
-      rel="stylesheet"
-      href="node_modules/modern-normalize/modern-normalize.css"
-    />
+
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
 
@@ -65,7 +70,7 @@
     <main>
       <section class="hero">
         <div class="hero-wrap">
-          <div class="container">
+          <div class="container hero-section">
             <h1 class="hero-title">
               Effective Solutions <br />
               for Your Business
@@ -76,7 +81,7 @@
       </section>
 
       <section>
-        <div class="container">
+        <div class="container second-section">
           <h2 class="visually-hidden">Pros</h2>
           <ul class="pros list">
             <li class="pros-list">
@@ -112,7 +117,7 @@
       </section>
 
       <section>
-        <div class="container">
+        <div class="container third-section">
           <h2 class="about">What are we doing</h2>
           <ul class="about-list list">
             <li class="about-list-item">
@@ -144,18 +149,21 @@
       </section>
 
       <section class="team">
-        <div class="container">
+        <div class="container fourth-section">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-separate">
               <img
+                class="team-ptoto"
                 src="./images/img-4.jpg"
                 alt="Mark Guerrero"
                 width="264"
                 height="260"
               />
-              <h3 class="team-separate-name">Mark Guerrero</h3>
-              <p class="team-separate-prof">Product Designer</p>
+              <div class="name-prof">
+                <h3 class="team-separate-name">Mark Guerrero</h3>
+                <p class="team-separate-prof">Product Designer</p>
+              </div>
             </li>
             <li class="team-list-separate">
               <img
@@ -164,8 +172,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-separate-name">Tom Ford</h3>
-              <p class="team-separate-prof">Frontend Developer</p>
+              <div class="name-prof">
+                <h3 class="team-separate-name">Tom Ford</h3>
+                <p class="team-separate-prof">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-list-separate">
               <img
@@ -174,8 +184,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-separate-name">Camila Garcia</h3>
-              <p class="team-separate-prof">Marketing</p>
+              <div class="name-prof">
+                <h3 class="team-separate-name">Camila Garcia</h3>
+                <p class="team-separate-prof">Marketing</p>
+              </div>
             </li>
             <li class="team-list-separate">
               <img
@@ -184,8 +196,10 @@
                 width="264"
                 height="260"
               />
-              <h3 class="team-separate-name">Daniel Wilson</h3>
-              <p class="team-separate-prof">UI Designer</p>
+              <div class="name-prof">
+                <h3 class="team-separate-name">Daniel Wilson</h3>
+                <p class="team-separate-prof">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
