--- a/index.html
+++ b/index.html
@@ -69,19 +69,17 @@
 
     <main>
       <section class="hero">
-        <div class="hero-wrap">
-          <div class="container hero-section">
-            <h1 class="hero-title">
-              Effective Solutions <br />
-              for Your Business
-            </h1>
-            <button class="hero-button" type="button">Order Service</button>
-          </div>
+        <div class="container">
+          <h1 class="hero-title">
+            Effective Solutions <br />
+            for Your Business
+          </h1>
+          <button class="hero-button" type="button">Order Service</button>
         </div>
       </section>
 
-      <section>
-        <div class="container second-section">
+      <section class="second-section">
+        <div class="container">
           <h2 class="visually-hidden">Pros</h2>
           <ul class="pros list">
             <li class="pros-list">
@@ -116,8 +114,8 @@
         </div>
       </section>
 
-      <section>
-        <div class="container third-section">
+      <section class="third-section">
+        <div class="container">
           <h2 class="about">What are we doing</h2>
           <ul class="about-list list">
             <li class="about-list-item">
@@ -148,8 +146,8 @@
         </div>
       </section>
 
-      <section class="team">
-        <div class="container fourth-section">
+      <section class="fourth-section">
+        <div class="container">
           <h2 class="team-title">Our Team</h2>
           <ul class="team-list list">
             <li class="team-list-separate">
@@ -208,15 +206,13 @@
 
     <footer class="footer">
       <div class="container">
-        <div class="footer-container">
-          <a class="footer-logo link" href="./index.html"
-            >Web<span class="footer-logo-span">Studio</span></a
-          >
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with
-            digital marketing & growth solutions.
-          </p>
-        </div>
+        <a class="footer-logo link" href="./index.html"
+          >Web<span class="footer-logo-span">Studio</span></a
+        >
+        <p class="footer-text">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
       </div>
     </footer>
   </body>
