--- a/portfolio.html
+++ b/portfolio.html
@@ -211,9 +211,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="rows-card"></div>
-                <h2 class="rows-list-item">Organic Food</h2>
-                <p class="rows-list-text">Web Site</p>
+                <div class="rows-card">
+                  <h2 class="rows-list-item">Organic Food</h2>
+                  <p class="rows-list-text">Web Site</p>
+                </div>
               </a>
             </li>
 
@@ -225,9 +226,10 @@
                   width="360"
                   height="300"
                 />
-                <div class="rows-card"></div>
-                <h2 class="rows-list-item">Fresh Coffee</h2>
-                <p class="rows-list-text">Web Site</p>
+                <div class="rows-card">
+                  <h2 class="rows-list-item">Fresh Coffee</h2>
+                  <p class="rows-list-text">Web Site</p>
+                </div>
               </a>
             </li>
           </ul>
